# tetrust

./: Cargo.toml  index.html  sound.js  tetrust.js
.cargo/: config.toml
src/: animation.rs  collision.rs  ghost.rs  main.rs  piece.rs  piece_actions.rs  piece_builder.rs  sounds.rs  stats.rs  ui.rs  user_actions.rs  wall.rs
