[package]
name = "tetrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[target.aarch64-apple-darwin]
rustflags = [
  "-Clink-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld", # Use LLD Linker
  "-Zshare-generics=y",                                      # (Nightly) Make the current crate share its generic instantiations
  "-Zthreads=0",                                             # (Nightly) Use improved multithreading with the recommended amount of threads.
]

[dependencies.bevy]
version = "0.13.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

